normal to h1 text

--- a/templates/about.html
+++ b/templates/about.html
@@ -1,4 +1,4 @@
-Hello This is a shitty but fun Word Counting Page that i made from a django web course
+<h1>Hello This is a shitty but fun Word Counting Page that i made from a django web course</h1>
 <br />
 
 <a href="{%url 'home'%}">Back to Home Page</a>
